--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run scraper
         run: |
-          python basketball_scraper.py
+          python scripts/basketball_scraper.py
 
       - name: Commit scraped data
         run: |
